add *args to molecule.py for old tests. update pyscf notebooks

--- a/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
+++ b/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
@@ -80,15 +80,15 @@
       "\n",
       "Not equal to tolerance rtol=1e-05, atol=1e-08\n",
       "\n",
-      "Mismatched elements: 3339 / 3364 (99.3%)\n",
-      "Max absolute difference: 7.31570753\n",
-      "Max relative difference: 3.72567153e+17\n",
-      " x: array([[ 9.732297e-01, -2.049642e-01, -8.922210e-08, ..., -9.718057e-08,\n",
-      "        -7.764849e-07,  1.526411e+00],\n",
-      "       [-9.379156e-03,  4.657901e-01,  2.837934e-07, ..., -1.798607e-06,...\n",
-      " y: array([[ 9.766285e-01, -4.612257e-03, -2.079873e-16, ..., -4.343873e-01,\n",
-      "        -1.944477e-06,  2.528644e+00],\n",
-      "       [-3.630840e-04,  5.651166e-01, -1.501893e-15, ..., -4.871092e-01,...\n"
+      "Mismatched elements: 3303 / 3364 (98.2%)\n",
+      "Max absolute difference: 6.03114453\n",
+      "Max relative difference: 6.06910092e+13\n",
+      " x: array([[-0.247339, -0.207374, -0.204964, ...,  0.254061,  0.97323 ,\n",
+      "         1.526411],\n",
+      "       [-0.821291, -0.651515, -0.64131 , ...,  0.82725 ,  1.025737,...\n",
+      " y: array([[-0.485859, -0.434387, -0.182559, ...,  0.195473,  0.976628,\n",
+      "         2.528644],\n",
+      "       [-1.282505, -0.528869, -0.487109, ...,  0.565117,  0.661558,...\n"
      ]
     }
    ],
@@ -339,7 +339,6 @@
     "def pyscf_dens_calc():\n",
     "    dm = mol_chemtools.density_matrix\n",
     "    ao_value = numint.eval_ao(mol_pyscf, grid_3d, deriv=1) \n",
-    "\n",
     "    # compare calcs using coeffs from chemtools and pyscf\n",
     "    mo_chemtools = ao_value.dot(mol_chemtools.mo.coefficient[0])\n",
     "    # The first row of rho is electron density, the rest three rows are electron\n",
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "@time_func\n",
     "def pyscf_ked_calc():\n",
@@ -420,23 +419,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_ked_calc took 0.17078738899726886 seconds\n",
-      "100 iters of gbasis_ked_calc took 3.6768004939949606 seconds\n",
+      "100 iters of pyscf_ked_calc took 0.1543311290006386 seconds\n",
+      "100 iters of gbasis_ked_calc took 3.791464164998615 seconds\n",
       "pyscf output shape: (5,)\n",
-      "gbasis output shape: (5,)\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "AssertionError",
-     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 5 / 5 (100%)\nMax absolute difference: 4.86137026\nMax relative difference: 0.84371824\n x: array([0.512645, 0.264598, 0.130788, 0.430418, 0.900471])\n y: array([0.947636, 0.353499, 0.166211, 0.564202, 5.761841])",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-951747f3edde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'pyscf output shape: {pyscf_ked.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'gbasis output shape: {gbasis_ked.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpyscf_ked\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgbasis_ked\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/GSoC/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    840\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    841\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 842\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    843\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    844\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatched elements: 5 / 5 (100%)\nMax absolute difference: 4.86137026\nMax relative difference: 0.84371824\n x: array([0.512645, 0.264598, 0.130788, 0.430418, 0.900471])\n y: array([0.947636, 0.353499, 0.166211, 0.564202, 5.761841])"
+      "gbasis output shape: (5,)\n",
+      "\n",
+      "Not equal to tolerance rtol=1e-07, atol=0\n",
+      "\n",
+      "Mismatched elements: 5 / 5 (100%)\n",
+      "Max absolute difference: 4.86137026\n",
+      "Max relative difference: 0.84371824\n",
+      " x: array([0.512645, 0.264598, 0.130788, 0.430418, 0.900471])\n",
+      " y: array([0.947636, 0.353499, 0.166211, 0.564202, 5.761841])\n"
      ]
     }
    ],
