--- a/examples/annotate_3D/Annotate_3D_Chimera.ipynb
+++ b/examples/annotate_3D/Annotate_3D_Chimera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "1f5c3fdd",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,11 @@
     "from rdkit import Chem\n",
     "from rdkit.Chem import PeriodicTable\n",
     "\n",
+    "from chemml.chem import Molecule\n",
+    "\n",
     "import os,glob,sys\n",
+    "\n",
+    "import pandas as pd \n",
     "\n",
     "import mendeleev \n",
     "from mendeleev import element"
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "8d549015",
    "metadata": {},
    "outputs": [
@@ -38,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit WARNING: [14:27:52] Counts line too short: '' on line4\n"
+      "RDKit WARNING: [14:43:30] Counts line too short: '' on line4\n"
      ]
     }
    ],
@@ -46,7 +50,8 @@
     "inFile = 'dichloropyridine26_q+0.fchk'\n",
     "loadInput = load_one(inFile)\n",
     "dump_one(loadInput,'test.pdb')\n",
-    "dump_one(loadInput,'test.mol2')\n",
+    "dump_one(loadInput,'intermediateFile.xyz')\n",
+    "interFile='intermediateFile.xyz'\n",
     "molName = inFile[:-5]\n",
     "mol = Chem.MolFromMolFile('test.mol2')\n",
     "print(molName)"
@@ -54,15 +59,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "b6043f33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Cl', 17)\n",
+      "('C', 6)\n",
+      "('C', 6)\n",
+      "('C', 6)\n",
+      "('C', 6)\n",
+      "('C', 6)\n",
+      "('Cl', 17)\n",
+      "('N', 7)\n",
+      "('H', 1)\n",
+      "('H', 1)\n",
+      "('H', 1)\n",
+      "[('Cl', 17), ('C', 6), ('C', 6), ('C', 6), ('C', 6), ('C', 6), ('Cl', 17), ('N', 7), ('H', 1), ('H', 1), ('H', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "symList = []\n",
+    "def rdkitProcessInputs(interFile,symList):\n",
+    "    xyz_files = glob.glob(interFile)\n",
+    "    molecule_list = [Molecule(interFile, input_type='xyz') for file in xyz_files]\n",
+    "    for molecule in molecule_list:\n",
+    "        molecule.to_smiles(kekuleSmiles=True)\n",
+    "    table = pd.DataFrame(data={'Name':interFile,  \n",
+    "                         'SMILES':[molecule.smiles for molecule in molecule_list]}, \n",
+    "                   columns=['Name','SMILES'])\n",
+    "    smiles = table.iloc[0,1]\n",
+    "    interMol = Chem.MolFromSmiles(smiles)\n",
+    "\n",
+    "    interMol = Chem.AddHs(interMol)\n",
+    "\n",
+    "    for atom in interMol.GetAtoms():\n",
+    "        step = atom.GetSymbol(),atom.GetAtomicNum()\n",
+    "        print(step)\n",
+    "        symList.append(step)\n",
+    "        #print(atom.GetSymbol(), atom.GetAtomicNum(), atom.GetTotalNumHs())\n",
+    "rdkitProcessInputs(interFile,symList)\n",
+    "\n",
+    "print(symList)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "edf3a177",
    "metadata": {},
    "outputs": [
@@ -94,51 +141,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "606397d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chemSymbolDict = []\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0c73fda1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to type.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-c77a4b7cc6e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mredundantNumberDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0melement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mRedundantAtomCheck\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mredundantNumberDict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/chemml_env/lib/python3.7/site-packages/mendeleev/mendeleev.py\u001b[0m in \u001b[0;36melement\u001b[0;34m(ids)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         raise ValueError(\n\u001b[0;32m---> 67\u001b[0;31m             \u001b[0;34m\"Expected a <list>, <tuple>, <str> or <int>, got: {0:s}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m         )\n\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to type.__format__"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Cl', 'C', 'C', 'C', 'C', 'C', 'Cl', 'N', 'H', 'H', 'H']\n"
      ]
     }
    ],
    "source": [
     "redundantNumberDict = []\n",
+    "convertedSymDict = []\n",
     "\n",
-    "element(numbers[1])\n",
+    "def ConvertAtomnumToAtomsym(convertedSymDict):\n",
+    "    for i in range(0,len(numbers)):\n",
+    "        if numbers[i] == symList[i][1]:\n",
+    "            step = symList[i][0]\n",
+    "            convertedSymDict.append(step)\n",
+    "        elif numbers[i] != symList[i][1]:\n",
+    "            step = symList[i][0]\n",
+    "            convertedSymDict.append(step)\n",
+    "ConvertAtomnumToAtomsym(convertedSymDict)\n",
+    "\n",
+    "print(convertedSymDict)\n",
+    "\n",
+    "\n",
     "def RedundantAtomCheck(redundantNumberDict):\n",
     "    count = 0\n",
-    "    for i in range(0,len(numbers)):\n",
-    "        if numbers[i] == numbers[i-1]:\n",
-    "            count += 1\n",
-    "            print(f\"{numbers[i]} REDUNANT ATOM! APPENDING INTEGER!\")\n",
-    "\n",
-    "            step = f\"{numbers[i]}{count}\"\n",
-    "            print(step)\n",
-    "            redundantNumberDict.append(step)\n",
-    "        elif numbers[i] != numbers[i-1]: \n",
+    "    for i in range(len(numbers)):\n",
+    "        \n",
+    "        while numbers[i] != numbers[i-1]: \n",
     "            count = 1\n",
-    "            step = f\"{numbers[i]}{count}\"\n",
+    "            step = f\"{convertedSymDict[i]}{count}\"\n",
+    "            redundantNumberDict.append(step)\n",
+    "            \n",
+    "            \n",
+    "        while numbers[i] == numbers[i-1]:\n",
+    "            count += 1\n",
+    "           # print(f\"{numbers[i]} REDUNANT ATOM! APPENDING INTEGER!\")\n",
+    "\n",
+    "            step = f\"{convertedSymDict[i]}{count}\"\n",
+    "           # print(step)\n",
+    "            redundantNumberDict.append(step)\n",
+    "        if numbers[i] != numbers[i-1]: \n",
+    "            count = 1\n",
+    "            step = f\"{convertedSymDict[i]}{count}\"\n",
     "            redundantNumberDict.append(step)\n",
     "            \n",
     "RedundantAtomCheck(redundantNumberDict)\n",
@@ -147,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 97,
    "id": "c0625011",
    "metadata": {},
    "outputs": [],
@@ -158,99 +219,12 @@
     "#f.write(\"match mode: 1-to-1\\n\")\n",
     "f.write(\"recipient: atoms\\n\")\n",
     "count = 0\n",
-    "for i,p in numChargeDict: \n",
+    "for i,p in enumerate(redundantNumberDict): \n",
     "    count += 1\n",
-    "    f.write(f\"\\t@{count}\\t{p} \\n\")\n",
+    "    f.write(f\"\\t@{redundantNumberDict[i]}\\t{espCharges[i]} \\n\")\n",
     "f.close() \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "7a9d69ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n",
-      "17\n",
-      "7\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in numbers: \n",
-    "    mystring = x \n",
-    "    print(mystring)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "44b024f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[17 17  7  6  6  6  6  6  1  1  1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "f7a711b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RDKit WARNING: [14:20:11] Counts line too short: '' on line4\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'GetAtoms'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-bfd2be0eb7c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmol2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMolFromMolFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test.mol2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0matom\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmol2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetAtoms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0matom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetSymbol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetExplicitValence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetTotalNumHs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'GetAtoms'"
-     ]
-    }
-   ],
-   "source": [
-    "mol2 = Chem.MolFromMolFile('test.mol2')\n",
-    "for atom in mol2.GetAtoms():\n",
-    "   print(atom.GetSymbol(), atom.GetExplicitValence(), atom.GetTotalNumHs())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e65e56e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
