erroneous suffix labeling for redundandNumberDict

--- a/examples/annotate_3D/Annotate_3D_Chimera.ipynb
+++ b/examples/annotate_3D/Annotate_3D_Chimera.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "0c73fda1",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Cl', 'C', 'C', 'C', 'C', 'C', 'Cl', 'N', 'H', 'H', 'H']\n"
+      "['Cl', 'C', 'C', 'C', 'C', 'C', 'Cl', 'N', 'H', 'H', 'H']\n",
+      "['Cl1', 'C2', 'C1', 'C1', 'C2', 'C3', 'Cl4', 'N5', 'H1', 'H2', 'H3']\n"
      ]
     }
    ],
@@ -183,21 +184,14 @@
     "def RedundantAtomCheck(redundantNumberDict):\n",
     "    count = 0\n",
     "    for i in range(len(numbers)):\n",
-    "        \n",
-    "        while numbers[i] != numbers[i-1]: \n",
-    "            count = 1\n",
-    "            step = f\"{convertedSymDict[i]}{count}\"\n",
-    "            redundantNumberDict.append(step)\n",
-    "            \n",
-    "            \n",
-    "        while numbers[i] == numbers[i-1]:\n",
+    "        if numbers[i] == numbers[i-1]:\n",
     "            count += 1\n",
     "           # print(f\"{numbers[i]} REDUNANT ATOM! APPENDING INTEGER!\")\n",
     "\n",
     "            step = f\"{convertedSymDict[i]}{count}\"\n",
     "           # print(step)\n",
     "            redundantNumberDict.append(step)\n",
-    "        if numbers[i] != numbers[i-1]: \n",
+    "        elif numbers[i] != numbers[i-1]: \n",
     "            count = 1\n",
     "            step = f\"{convertedSymDict[i]}{count}\"\n",
     "            redundantNumberDict.append(step)\n",
@@ -208,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
    "id": "c0625011",
    "metadata": {},
    "outputs": [],
@@ -225,6 +219,14 @@
     "f.close() \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905b7fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
