--- a/examples/plotting/2D_Plotting_Gradient.ipynb
+++ b/examples/plotting/2D_Plotting_Gradient.ipynb
@@ -364,15 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-203-f6f065868fc4>, line 45)",
+     "evalue": "invalid syntax (<ipython-input-207-95317d26ac8b>, line 50)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-203-f6f065868fc4>\"\u001b[0;36m, line \u001b[0;32m45\u001b[0m\n\u001b[0;31m    return rot\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-207-95317d26ac8b>\"\u001b[0;36m, line \u001b[0;32m50\u001b[0m\n\u001b[0;31m    return rot\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -401,7 +401,9 @@
     "    \n",
     "    color : str\n",
     "        Color of Gradient Arrows  \n",
-    "        \n",
+    "    \n",
+    "    _rotate_3d(normal) : helper function\n",
+    "        this function consoliates the rotation matrix operation \n",
     "    \"\"\"\n",
     "\n",
     "    v1, v2 = coord2 - coord1, coord3 - coord1\n",
@@ -504,48 +506,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scalar_func = ''\n",
-    "levels = 1\n",
+    "\n",
     "coord1 = coord[0]\n",
     "coord2 = coord[1]\n",
     "coord3 = coord[2]\n",
-    "def PlotContourOverPlane(coord1,coord2,coord3,scalar_func, levels, step_size=0.5):\n",
-    "    coord1 = coord[0] \n",
-    "    coord2 = coord[1]\n",
-    "    coord3 = coord[2]\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "PlotContourOverPlane(coord1,coord2,coord3,scalar_func, levels, step_size=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.17212008e-04 3.59387779e-04 5.82559952e-04 ... 6.25544026e-06\n",
-      " 4.63270562e-06 3.42546710e-06]\n"
-     ]
-    }
-   ],
-   "source": [
     "\n",
-    "electroDensity = mol.compute_density(grid_plane)\n",
-    "print(electroDensity)"
+    "def plotScalarFunctionContourPlot(coord1, coord2, coord3,scalarFunc,step_size=0.3):\n",
+    "    v1, v2 = coord1 - coord3, coord2 - coord3\n",
+    "    normal = np.cross(v1, v2)\n",
+    "    normal /= np.linalg.norm(normal)\n",
+    "    print(\"Orthonormal : \")\n",
+    "    a, b, c = normal\n",
+    "    def _get_rotation_matrix_to_xy_plane(normal): \n",
+    "        \"\"\"\n",
+    "        This function is designed to consolidate a 2D rotate \n",
+    "        operation, returning rot, which can then be used \n",
+    "        to determine the rotated coordinates by computing the dot \n",
+    "        product \n",
+    "        \"\"\"\n",
+    "        a,b,c = normal\n",
+    "        costheta = c\n",
+    "        sintheta = np.sqrt(a**2.0 + b**2.0)\n",
+    "        x = u_1 = b / np.sqrt(a**2.0 + b**2.0)\n",
+    "        y = u_2 = -a / np.sqrt(a**2.0 + b**2.0)\n",
+    "\n",
+    "        cos, sin = np.cos(costheta), np.sin(sintheta)\n",
+    "        rot = np.matrix([[cos, sin], [-sin, cos]]) # 2D Rotate \n",
+    "\n",
+    "        return rot\n",
+    "    _get_rotation_matrix_to_xy_plane(normal)\n",
+    "    print(\"Rotation Operation: \")\n",
+    "    print(rot)\n",
+    "\n",
+    "    rot_coords = np.dot(rot, (coord - coord[0]).T).T\n",
+    "    print(\"Rotation Coordinates: \")\n",
+    "    print(rot_coords)\n",
+    "    l_bnd = np.min(rot_coords, axis=0) - 1\n",
+    "    u_bnd = np.max(rot_coords, axis=0) + 1\n",
+    "\n",
+    "    x_grid = np.arange(l_bnd[0], u_bnd[0] + step_size, step_size)\n",
+    "    y_grid = np.arange(l_bnd[1], u_bnd[1] + step_size, step_size)\n",
+    "    grid_2d = np.array(np.meshgrid(x_grid, y_grid)).T.reshape(-1,2)\n",
+    "    \n",
+    "\n",
+    "    grid_zeros = np.hstack((grid_2d, np.zeros((grid_2d.shape[0], 1), dtype=np.float)))\n",
+    "    grid_plane = np.einsum(\"ij,kj->ki\", rot.T, grid_zeros)\n",
+    "    grid_plane += coord[0]\n",
+    "    print(\"Grid Plane:\")\n",
+    "    print(grid_plane)\n",
+    "\n",
+    "    x = grid_plane[:,0]\n",
+    "    y = grid_plane[:,1]\n",
+    "    scalarFunc = mol.compute_density(grid_plane)\n",
+    "    scalarFuncPlot = np.array(scalarFunc)\n",
+    "\n",
+    "    #proj = (np.dot(x, y) / np.linalg.norm(y))\n",
+    "    scalarFuncPlot = np.broadcast_to((scalarFuncPlot*scalarFuncPlot).sum(-1)[...,None], scalarFuncPlot.shape)\n",
+    "\n",
+    "    proj = density - np.dot(density,normal)[:,np.newaxis] * normal\n",
+    "    rotProj = np.dot(rot,proj.T).T\n",
+    "    rotProj /=np.linalg.norm(rotProj,axis=1).reshape((-1,1))\n",
+    "    scalarFuncPlot = np.array(scalarFunc)\n",
+    "    # rotScalarFunc = \n",
+    "    #levels = np.array([0.001 * n * n for n in range(1)])\n",
+    "    levels = 1\n",
+    "    #plt.contour(x,y,scalarFuncPlot,levels)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -572,80 +607,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-199-f3b1e4b7dfd8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0mscalarFuncPlot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_to\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m \u001b[0mproj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0mrotProj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mproj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-214-4bba75dd2f37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplotScalarFunctionContourPlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscalarFunc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-213-e4bd0a8d778e>\u001b[0m in \u001b[0;36mplotScalarFunctionContourPlot\u001b[0;34m(coord1, coord2, coord3, scalarFunc, step_size)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0mscalarFuncPlot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_to\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscalarFuncPlot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m     \u001b[0mproj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdensity\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdensity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnormal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m     \u001b[0mrotProj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrot\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mproj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0mrotProj\u001b[0m \u001b[0;34m/=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrotProj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: shapes (1764,) and (3,) not aligned: 1764 (dim 0) != 3 (dim 0)"
      ]
     }
    ],
    "source": [
-    "coord1 = coord[0]\n",
-    "coord2 = coord[1]\n",
-    "coord3 = coord[2]\n",
-    "\n",
-    "\n",
-    "v1, v2 = coord1 - coord3, coord2 - coord3\n",
-    "normal = np.cross(v1, v2)\n",
-    "normal /= np.linalg.norm(normal)\n",
-    "\n",
-    "a, b, c = normal\n",
-    "def _get_rotation_matrix_to_xy_plane(normal): \n",
-    "    \"\"\"\n",
-    "    This function is designed to consolidate a 2D rotate \n",
-    "    operation, returning rot, which can then be used \n",
-    "    to determine the rotated coordinates by computing the dot \n",
-    "    product \n",
-    "    \"\"\"\n",
-    "    a,b,c = normal\n",
-    "    costheta = c\n",
-    "    sintheta = np.sqrt(a**2.0 + b**2.0)\n",
-    "    x = u_1 = b / np.sqrt(a**2.0 + b**2.0)\n",
-    "    y = u_2 = -a / np.sqrt(a**2.0 + b**2.0)\n",
-    "\n",
-    "    cos, sin = np.cos(costheta), np.sin(sintheta)\n",
-    "    rot = np.matrix([[cos, sin], [-sin, cos]])\n",
-    "\n",
-    "    return rot\n",
-    "_get_rotation_matrix_to_xy_plane(normal)\n",
-    "print(rot)\n",
-    "\n",
-    "rot_coords = np.dot(rot, (coord - coord[0]).T).T\n",
-    "\n",
-    "l_bnd = np.min(rot_coords, axis=0) - 1\n",
-    "u_bnd = np.max(rot_coords, axis=0) + 1\n",
-    "\n",
-    "x_grid = np.arange(l_bnd[0], u_bnd[0] + step_size, step_size)\n",
-    "y_grid = np.arange(l_bnd[1], u_bnd[1] + step_size, step_size)\n",
-    "grid_2d = np.array(np.meshgrid(x_grid, y_grid)).T.reshape(-1,2)\n",
-    "\n",
-    "\n",
-    "grid_zeros = np.hstack((grid_2d, np.zeros((grid_2d.shape[0], 1), dtype=np.float)))\n",
-    "grid_plane = np.einsum(\"ij,kj->ki\", rot.T, grid_zeros)\n",
-    "grid_plane += coord[0]\n",
-    "print(\"grid plane\")\n",
-    "print(grid_plane)\n",
-    "\n",
-    "x = grid_plane[:,0]\n",
-    "y = grid_plane[:,1]\n",
-    "scalarFunc = mol.compute_density(grid_plane)\n",
-    "scalarFuncPlot = np.array(scalarFunc)\n",
-    "\n",
-    "#proj = (np.dot(x, y) / np.linalg.norm(y))\n",
-    "scalarFuncPlot = np.broadcast_to((scalarFuncPlot*scalarFuncPlot).sum(-1)[...,None], scalarFuncPlot.shape)\n",
-    "\n",
-    "proj = np.dot(scalarFuncPlot,normal).reshape(-1,1)\n",
-    "rotProj = np.dot(rot,proj.T).T\n",
-    "\n",
-    "rotProj /=np.linalg.norm(rotProj,axis=1).reshape((-1,1))\n",
-    "scalarFuncPlot = np.array(scalarFunc)\n",
-    "proj_density = scalarFunc - np.dot(scalarFunc, proj)[:, np.newaxis] * proj\n",
-    "print(proj_density)\n",
-    "\n",
-    "\n",
-    "#scalarFuncPlot = scalarFuncPlot.reshape(len(x),len(y))\n",
-    "#levels = np.array([0.001 * n * n for n in range(1)])\n",
-    "levels = 1\n",
-    "#plt.contour(x,y,scalarFuncPlot,levels)\n",
-    "plt.show()"
+    "plotScalarFunctionContourPlot(coord1, coord2, coord3,scalarFunc,step_size=0.3)"
    ]
   },
   {
